# interior-designer-kit

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.cowork/skills/interior-design-ops/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml
apps/web/: README.md  middleware.ts  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: AuthNav.tsx  ModeBadge.tsx
automation/: README.md  automation.config.json
automation/docs/: best-practices.md  cowork-setup.md
automation/local/: .env.example  README.md  pyproject.toml
automation/local/automation/: __init__.py  agent_sdk_runner.py  cli.py  config.py  direct_runner.py  tools.py
automation/local/inbox/: README.txt
docs/: data-model.md  design-system-audit.md  workflow.md
docs/stages/: 01-lead.md  02-briefing.md  03-survey.md  04-proposal.md  05-contract.md  06-concept.md  07-layout.md  08-design3d.md  09-working-drawing.md  10-rab.md  11-procurement.md  12-production.md  13-site.md  14-qc.md  15-handover.md  16-after-sales.md  STAGE_TEMPLATE.md
frontend/slices/onboarding-wizard/: preview.tsx  slice.contract.ts  slice.json  slice.manifest.json
local/: .env.example  README.md
local/runner/: agent.mjs  config.mjs  index.mjs  package.json
local/scripts/: brief.bat  lead-parse.bat  run.bat
services/: README.md
services/cad/: main.py  requirements.txt
services/render/: main.py
services/takeoff/: main.py
(+14 files in other folders)
