# Packaging for the local automation CLI.
# Install from this `local/` directory:  pip install -e .   (or: uv pip install -e .)
[project]
name = "automation-local"
version = "0.1.0"
description = "Local CLI for the automation defined by automation.config.json (Anthropic SDK + Claude Agent SDK)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
automation = "automation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]
